--- a/scrum-ios/scrum-ios/Levels.storyboard
+++ b/scrum-ios/scrum-ios/Levels.storyboard
@@ -23,7 +23,7 @@
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="lj2-TO-bVP">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.89205109126984128" green="0.89205109126984128" blue="0.89205109126984128" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="0.0" id="5Ak-J2-8Ct">
                                     <size key="itemSize" width="371" height="144"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
