--- a/scrum-ios/scrum-ios/SubLevel.storyboard
+++ b/scrum-ios/scrum-ios/SubLevel.storyboard
@@ -14,10 +14,10 @@
         </array>
     </customFonts>
     <scenes>
-        <!--View Controller-->
+        <!--Sub Level View Controller-->
         <scene sceneID="OdZ-2s-v3P">
             <objects>
-                <viewController id="ky8-KI-yj7" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SubLevelViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ky8-KI-yj7" customClass="SubLevelViewController" customModule="scrum_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="aja-3e-Bty"/>
                         <viewControllerLayoutGuide type="bottom" id="zBk-IY-VIP"/>
@@ -27,24 +27,23 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="¿SCRUM?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bkk-5Q-uKi">
-                                <rect key="frame" x="103" y="80" width="170.5" height="43"/>
+                                <rect key="frame" x="102" y="80" width="171" height="43"/>
                                 <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="35"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="mPS-wR-T2k">
-                                <rect key="frame" x="0.0" y="153" width="382" height="364"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="mPS-wR-T2k">
+                                <rect key="frame" x="0.0" y="219" width="375" height="378"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yfp-hL-pfK">
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="20" minimumInteritemSpacing="20" id="yfp-hL-pfK">
                                     <size key="itemSize" width="230" height="291"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="50" minY="0.0" maxX="50" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="A1O-zP-I4c">
-                                        <rect key="frame" x="50" y="37" width="230" height="291"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SubLevelCell" id="A1O-zP-I4c" customClass="SubLevelCollectionViewCell" customModule="scrum_ios" customModuleProvider="target">
+                                        <rect key="frame" x="10" y="44" width="230" height="291"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="230" height="291"/>
@@ -52,14 +51,43 @@
                                         </view>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="ky8-KI-yj7" id="R05-WM-e6j"/>
+                                    <outlet property="delegate" destination="ky8-KI-yj7" id="x5K-aZ-jfq"/>
+                                </connections>
                             </collectionView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1 subnivel" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JO2-A0-EO5">
+                                <rect key="frame" x="136" y="133" width="103" height="26"/>
+                                <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="21"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yKb-BT-F6I">
+                                <rect key="frame" x="335" y="25" width="30" height="42"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal" title="x"/>
+                                <connections>
+                                    <action selector="backButtonTapped:" destination="ky8-KI-yj7" eventType="touchUpInside" id="TS8-Gk-e52"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.65052652792912458" blue="0.10306372035907629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="yKb-BT-F6I" secondAttribute="trailing" constant="10" id="2lL-v7-d9Y"/>
+                            <constraint firstAttribute="trailing" secondItem="mPS-wR-T2k" secondAttribute="trailing" id="52e-wM-26O"/>
+                            <constraint firstItem="mPS-wR-T2k" firstAttribute="leading" secondItem="6YK-Jx-ovo" secondAttribute="leading" id="5uh-of-zCt"/>
+                            <constraint firstItem="JO2-A0-EO5" firstAttribute="top" secondItem="bkk-5Q-uKi" secondAttribute="bottom" constant="10" id="A0R-Md-vd7"/>
+                            <constraint firstItem="zBk-IY-VIP" firstAttribute="top" secondItem="mPS-wR-T2k" secondAttribute="bottom" constant="70" id="AZ8-tz-MYf"/>
+                            <constraint firstItem="JO2-A0-EO5" firstAttribute="centerX" secondItem="6YK-Jx-ovo" secondAttribute="centerX" id="Be0-U3-b4P"/>
+                            <constraint firstItem="mPS-wR-T2k" firstAttribute="top" secondItem="JO2-A0-EO5" secondAttribute="bottom" constant="60" id="Lm0-t9-6VX"/>
                             <constraint firstItem="bkk-5Q-uKi" firstAttribute="centerX" secondItem="6YK-Jx-ovo" secondAttribute="centerX" id="Nqm-9w-G0f"/>
+                            <constraint firstItem="yKb-BT-F6I" firstAttribute="top" secondItem="aja-3e-Bty" secondAttribute="bottom" constant="5" id="Tvd-w1-m9q"/>
                             <constraint firstItem="bkk-5Q-uKi" firstAttribute="top" secondItem="6YK-Jx-ovo" secondAttribute="top" constant="80" id="kb1-TP-qKx"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="mPS-wR-T2k" id="LwJ-z5-8hZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xuS-ww-1iE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
