--- a/scrum-ios/scrum-ios/SubLevelCollectionViewCell.xib
+++ b/scrum-ios/scrum-ios/SubLevelCollectionViewCell.xib
@@ -16,97 +16,119 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SublevelCell" id="gTV-IL-0wX" customClass="SubLevelCollectionViewCell" customModule="scrum_ios" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="155" height="215"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SubLevelCell" id="gTV-IL-0wX" customClass="SubLevelCollectionViewCell" customModule="scrum_ios" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="255" height="455"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="155" height="215"/>
+                <rect key="frame" x="0.0" y="0.0" width="255" height="455"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EN CURSO" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="soP-3g-nyv">
-                        <rect key="frame" x="0.0" y="183" width="155" height="22"/>
-                        <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="18"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Introducción" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GYD-Of-NOE">
-                        <rect key="frame" x="0.0" y="15" width="155" height="22"/>
-                        <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="18"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bie-fQ-xbM" customClass="UICircularProgressRingView" customModule="UICircularProgressRing">
-                        <rect key="frame" x="27" y="69.5" width="100" height="100"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4N5-fB-q98">
+                        <rect key="frame" x="0.0" y="0.0" width="255" height="455"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NO INICIADO" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="soP-3g-nyv">
+                                <rect key="frame" x="15" y="406" width="225" height="28.5"/>
+                                <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="23"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Introducción" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GYD-Of-NOE">
+                                <rect key="frame" x="53" y="20" width="148.5" height="28.5"/>
+                                <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="23"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bie-fQ-xbM" customClass="MBCircularProgressBarView">
+                                <rect key="frame" x="27" y="127" width="200" height="200"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="TeP-9h-hfy"/>
+                                    <constraint firstAttribute="width" constant="200" id="YwA-Ez-feR"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="value">
+                                        <real key="value" value="70"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="maxValue">
+                                        <real key="value" value="100"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="outerRingWidth">
+                                        <real key="value" value="3"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="innerRingColor">
+                                        <color key="value" red="1" green="0.65052652789999998" blue="0.1030637204" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="innerRingSpacing">
+                                        <real key="value" value="-1"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="innerRingWidth">
+                                        <real key="value" value="6"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="shouldShowValueText" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="decimalPlaces">
+                                        <integer key="value" value="0"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="startAngle">
+                                        <real key="value" value="-90"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="valueIndicator" value="%"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="endAngle">
+                                        <real key="value" value="270"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="fontSize">
+                                        <real key="value" value="22"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="unitString" value="%"/>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="showValueString" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="emptyLineWidth">
+                                        <real key="value" value="3"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="progressLineWidth">
+                                        <real key="value" value="11"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="progressAngle">
+                                        <real key="value" value="100"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="progressRotationAngle">
+                                        <real key="value" value="50"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="valueFontSize">
+                                        <real key="value" value="55"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="unitFontSize">
+                                        <real key="value" value="28"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="100" id="Shk-G4-0BI"/>
-                            <constraint firstAttribute="height" constant="100" id="ux6-EQ-d5J"/>
+                            <constraint firstItem="bie-fQ-xbM" firstAttribute="centerY" secondItem="4N5-fB-q98" secondAttribute="centerY" id="GWd-L2-yeC"/>
+                            <constraint firstAttribute="bottom" secondItem="soP-3g-nyv" secondAttribute="bottom" constant="20" id="NMT-LZ-OG5"/>
+                            <constraint firstItem="GYD-Of-NOE" firstAttribute="centerX" secondItem="4N5-fB-q98" secondAttribute="centerX" id="Oxc-4E-wAt"/>
+                            <constraint firstItem="GYD-Of-NOE" firstAttribute="top" secondItem="4N5-fB-q98" secondAttribute="top" constant="20" id="QMa-8s-ozu"/>
+                            <constraint firstAttribute="trailing" secondItem="soP-3g-nyv" secondAttribute="trailing" constant="15" id="Wnw-ly-FtN"/>
+                            <constraint firstItem="bie-fQ-xbM" firstAttribute="centerX" secondItem="4N5-fB-q98" secondAttribute="centerX" id="Xg9-mm-Nfs"/>
+                            <constraint firstItem="soP-3g-nyv" firstAttribute="leading" secondItem="4N5-fB-q98" secondAttribute="leading" constant="15" id="gsN-U7-Wza"/>
                         </constraints>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="number" keyPath="value">
-                                <real key="value" value="50"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="number" keyPath="maxValue">
-                                <real key="value" value="100"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="number" keyPath="outerRingWidth">
-                                <real key="value" value="3"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="color" keyPath="innerRingColor">
-                                <color key="value" red="1" green="0.65052652789999998" blue="0.1030637204" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="number" keyPath="innerRingSpacing">
-                                <real key="value" value="-1"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="number" keyPath="innerRingWidth">
-                                <real key="value" value="6"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="boolean" keyPath="shouldShowValueText" value="YES"/>
-                            <userDefinedRuntimeAttribute type="number" keyPath="decimalPlaces">
-                                <integer key="value" value="0"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="number" keyPath="startAngle">
-                                <real key="value" value="-90"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="string" keyPath="valueIndicator" value="%"/>
-                            <userDefinedRuntimeAttribute type="number" keyPath="endAngle">
-                                <real key="value" value="270"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="number" keyPath="fontSize">
-                                <real key="value" value="22"/>
-                            </userDefinedRuntimeAttribute>
-                        </userDefinedRuntimeAttributes>
                     </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1/3" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4NI-sv-r2R">
-                        <rect key="frame" x="0.0" y="37" width="155" height="20"/>
-                        <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="16"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
             </view>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="4NI-sv-r2R" firstAttribute="top" secondItem="GYD-Of-NOE" secondAttribute="bottom" id="4Wp-KA-Nj8"/>
-                <constraint firstItem="4NI-sv-r2R" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="7bU-mo-evX"/>
-                <constraint firstItem="GYD-Of-NOE" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="15" id="Azn-KM-o0b"/>
-                <constraint firstItem="bie-fQ-xbM" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="EjY-pA-ViN"/>
-                <constraint firstItem="bie-fQ-xbM" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" constant="12" id="HRC-f5-dRh"/>
-                <constraint firstAttribute="trailing" secondItem="soP-3g-nyv" secondAttribute="trailing" id="QrO-5n-6cZ"/>
-                <constraint firstItem="soP-3g-nyv" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="SX9-QV-Kug"/>
-                <constraint firstAttribute="trailing" secondItem="4NI-sv-r2R" secondAttribute="trailing" id="URv-v9-aKg"/>
-                <constraint firstAttribute="bottom" secondItem="soP-3g-nyv" secondAttribute="bottom" constant="10" id="VaQ-gy-k3V"/>
-                <constraint firstAttribute="trailing" secondItem="GYD-Of-NOE" secondAttribute="trailing" id="uc1-xv-Mqd"/>
-                <constraint firstItem="GYD-Of-NOE" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="w8J-K0-yFU"/>
+                <constraint firstAttribute="trailing" secondItem="4N5-fB-q98" secondAttribute="trailing" id="DsK-F3-Nnr"/>
+                <constraint firstAttribute="bottom" secondItem="4N5-fB-q98" secondAttribute="bottom" id="PqU-Vz-Uuh"/>
+                <constraint firstItem="4N5-fB-q98" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="VEw-iL-S7R"/>
+                <constraint firstItem="4N5-fB-q98" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="xkh-wb-y5R"/>
             </constraints>
-            <size key="customSize" width="155" height="215"/>
+            <size key="customSize" width="187" height="255"/>
             <connections>
-                <outlet property="circularProgressView" destination="bie-fQ-xbM" id="D0C-3M-aIS"/>
+                <outlet property="backView" destination="4N5-fB-q98" id="Hu5-i2-mEY"/>
+                <outlet property="circularProgressView" destination="bie-fQ-xbM" id="Stn-l6-FS1"/>
                 <outlet property="sublevelStatusLabel" destination="soP-3g-nyv" id="6Ri-6o-uFR"/>
                 <outlet property="sublevelTitleLabel" destination="GYD-Of-NOE" id="0Cn-Dp-fF3"/>
-                <outlet property="sublevelsNumberLabel" destination="4NI-sv-r2R" id="Fk5-VH-z51"/>
             </connections>
-            <point key="canvasLocation" x="77.5" y="22.5"/>
+            <point key="canvasLocation" x="93.5" y="42.5"/>
         </collectionViewCell>
     </objects>
 </document>
